--- a/src/Whales/WhalesStyle.css
+++ b/src/Whales/WhalesStyle.css
@@ -13,3 +13,41 @@ body{
     opacity: 0.8;
     z-index: 0;
 }
+
+.inputHover {
+    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.04), 0px 4px 10px 0px rgba(0, 0, 0, 0.04);
+    transition: all 0.5s;
+}
+
+.inputHover:focus {
+    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.04), 0px 4px 10px 0px rgba(0, 0, 0, 0.04), 0px 0px 0px 4px rgba(0, 0, 0, 0.04);
+    border-color: #2F15D0;
+}
+
+.inputHover:hover {
+    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.04), 0px 4px 10px 0px rgba(0, 0, 0, 0.04);
+    border-color: #2F15D0;
+    transition: all 0.5s;
+}
+
+.buttonHover{
+    transition: all 0.5s;
+    font-size: 1rem;
+}
+
+.buttonHover:hover{
+    transition: all 0.5s;
+    background: #2F15D0;
+    color: white;
+    transform: scale(1.02);
+}
+
+.backgroundBlur{ 
+    z-index: 1;
+    position: absolute;
+    width: 100%;
+    background-color: transparent;
+    background-image: linear-gradient( 90deg, rgb(0 0 0 / 43%) 0%, rgb(255 255 255 / 0%) 27.6%, rgb(0 0 0 / 0%) 53.12%, rgb(0 0 0 / 38%) 81.77%, rgb(0 0 0 / 54%) 100% );
+    box-shadow: 0 0 34px -13px #000000c2;
+    height: 183px;
+}
